--- a/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
+++ b/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
@@ -4,7 +4,7 @@
     <div class="col-12">
       <ngb-carousel *ngIf="images.length" [showNavigationArrows]="images?.length > 1">
         <ng-template ngbSlide *ngFor="let img of images">
-          <div class="picsum-img-wrapper">
+          <div class="picsum-img-wrapper"> {{img}}
             <img [src]="img" alt="Random first slide" class="text-center">
           </div>
         </ng-template>
